--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.google.android:flexbox:0.3.2'
     implementation 'com.android.support:cardview-v7:21.0.+'
     implementation 'com.android.support:recyclerview-v7:21.0.+'
+    implementation 'com.j256.ormlite:ormlite-core:4.48'
+    implementation 'com.j256.ormlite:ormlite-android:4.48'
 }
